name:           much
version:        1.2.0
license:        MIT
author:         tv <tv@krebsco.de>
maintainer:     tv@krebsco.de
build-type:     Simple
cabal-version:  >=1.10

executable much
  main-is: test5.hs
  build-depends:  base
                , aeson
                , attoparsec
                , base64-bytestring
                , blaze-builder
                , blessings
                , bytestring
                , case-insensitive
                , containers
                , deepseq
                , directory
                , docopt
                , email-header
                , filepath
                , friendly-time
                , hyphenation
                , linebreak
                , old-locale
                , process
                , random
                , rosezipper
                , safe
                , scanner
                , split
                , terminal-size
                , text
                , time
                , transformers
                , transformers-compat
                , unix
                , vector
  default-language: Haskell2010
  ghc-options: -O2 -Wall -threaded
