name:           much
version:        1.2.0
license:        MIT
author:         tv <tv@krebsco.de>
maintainer:     tv@krebsco.de
build-type:     Simple
cabal-version:  >=1.10

executable much-tv
  hs-source-dirs:   config
  main-is:          tv.hs
  default-language: Haskell2010
  ghc-options:      -O2 -threaded -with-rtsopts=-N
  build-depends:    much
                  , base
                  , blessings
                  , deepseq
                  , transformers
                  , aeson
                  , case-insensitive
                  , time
                  , safe
                  , scanner
                  , directory
                  , hyphenation
                  , linebreak
                  , bytestring
                  , process
                  , text
                  , containers
                  , rosezipper

executable much-kmein
  hs-source-dirs:   config
  main-is:          kmein.hs
  default-language: Haskell2010
  ghc-options:      -O2 -threaded -with-rtsopts=-N
  build-depends:    much
                  , base
                  , blessings
                  , bytestring
                  , containers
                  , filepath
                  , hyphenation
                  , linebreak
                  , process
                  , rosezipper
                  , scanner
                  , text
                  , time
                  , unix

library
  hs-source-dirs:  src
  exposed-modules: Much.Core
                 , Much.Action
                 , Much.API
                 , Much.API.Config
                 , Much.Config
                 , Much.Event
                 , Much.ParseMail
                 , Much.RenderTreeView
                 , Much.Screen
                 , Much.State
                 , Much.TagUtils
                 , Much.TreeSearch
                 , Much.TreeView
                 , Much.TreeView.Types
                 , Much.TreeZipperUtils
                 , Much.Utils
                 , Network.Mail.Mime
                 , Notmuch
                 , Notmuch.Class
                 , Notmuch.Message
                 , Notmuch.SearchResult
  other-modules:   Codec.MIME.Base64
                 , Codec.MIME.Decode
                 , Codec.MIME.Parse
                 , Codec.MIME.QuotedPrintable
                 , Codec.MIME.Type
                 , Data.Aeson.Extends
  build-depends:   base
                 , aeson
                 , attoparsec
                 , base64-bytestring
                 , blaze-builder
                 , blessings
                 , bytestring
                 , case-insensitive
                 , containers
                 , deepseq
                 , directory
                 , docopt
                 , either
                 , email-header
                 , filepath
                 , friendly-time
                 , hyphenation
                 , http-types
                 , linebreak
                 , network
                 , old-locale
                 , optparse-applicative
                 , process
                 , random
                 , rosezipper
                 , safe
                 , scanner
                 , servant-server
                 , split
                 , terminal-size
                 , text
                 , time
                 , transformers
                 , transformers-compat
                 , unix
                 , vector
                 , wai
                 , warp
  default-language: Haskell2010
  ghc-options: -O2 -Wall -threaded
